--- a/angularVisit/src/app/menu/menu.component.html
+++ b/angularVisit/src/app/menu/menu.component.html
@@ -1,6 +1,6 @@
-<div>
-  <a routerLink="/home">Home</a>
-  <a routerLink="/page">Page</a>
-  <!--<a routerLink="/about">About</a>-->
-  <a routerLink="/users">Users</a>
+<div class="menu-container">
+  <a routerLink="/home" class="menu-item">Home</a>
+  <a routerLink="/page" class="menu-item">Page</a>
+  <!--<a routerLink="/about" class="menu-item">About</a>-->
+  <a routerLink="/users" class="menu-item">Users</a>
 </div>
