Контейнеры макета завернуты в "position: absolute; 0 0 0 0", Меню центрировано по вертикали.

--- a/angularVisit/src/app/about/about.component.html
+++ b/angularVisit/src/app/about/about.component.html
@@ -1,3 +1,9 @@
-<p>
-  about works!
-</p>
+<div class="container">
+  <p class="name">
+    Загляда Иван Михайлович
+  </p>
+  <!--<img src="assets/user.png" alt="foto" class="photo">-->
+  <div class="photo"></div>
+  <p class="about-short">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Consequatur consequuntur corporis labore libero perferendis quibusdam sequi vel veniam. A, ad aperiam deserunt excepturi in nulla quisquam similique sunt tenetur voluptatum. Accusamus, cum distinctio dolore eaque eos fugiat impedit ipsam natus nesciunt perspiciatis quas quia quis quos sequi similique voluptate voluptates.</p>
+  <p class="about-long">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ad adipisci alias architecto deleniti dignissimos distinctio dolore fugit impedit inventore iste numquam obcaecati odio, odit officia pariatur praesentium quia rerum totam vel veniam? Cum impedit, laborum mollitia nemo quo quos saepe similique! Accusamus cum deleniti esse eum fugit laboriosam quibusdam quos sed ut vitae? Alias asperiores cupiditate, deserunt harum placeat quas repudiandae sequi. Accusantium animi aspernatur atque commodi consequuntur corporis deserunt dignissimos dolores doloribus ex exercitationem facilis fuga libero magnam maiores minus mollitia neque nostrum nulla officiis, optio perferendis placeat praesentium quaerat quasi quidem quod reprehenderit sapiente sequi similique tempora vero voluptas voluptatum. Aliquid aperiam atque aut blanditiis consequuntur cum cupiditate deleniti dolores ea eos et eum ex expedita facilis fuga in inventore ipsam laboriosam laborum maiores molestias natus, non perspiciatis placeat praesentium quam quas quis quos recusandae rem repudiandae soluta temporibus vero! Animi dolorem iste minus molestias, quaerat quia voluptate.</p>
+</div>
