--- a/angularVisit/src/app/logo/logo.component.html
+++ b/angularVisit/src/app/logo/logo.component.html
@@ -1,3 +1,4 @@
 <p class="logo-container">
-  <img [src]="LOGO" class="logo"/>
+  <!--<img [src]="LOGO" class="logo"/>-->
+  <img src="/assets/logo.svg" class="logo"/>
 </p>
