--- a/angularVisit/src/app/menu/menu.component.html
+++ b/angularVisit/src/app/menu/menu.component.html
@@ -1,4 +1,4 @@
-<div class="menu-container">
+<div class="container">
   <a routerLink="/home" class="menu-item">Home</a>
   <a routerLink="/page" class="menu-item">Page</a>
   <!--<a routerLink="/about" class="menu-item">About</a>-->
