--- a/angularVisit/src/app/app.component.css
+++ b/angularVisit/src/app/app.component.css
@@ -1,40 +1,3 @@
-
-/*.grid {*/
-    /*display: grid;*/
-    /*grid-template-rows: 100px 100px;*/
-    /*grid-template-columns: repeat(3,1fr)*/
-/*}*/
-/*
-.grid{
-    display: flex;
-    justify-content : center;
-    align-items : flex-start;
-    flex-direction : row;
-    flex-wrap : wrap;
-}
-.grid-item{
-    display: inline-block;
-    --flex:1;
-}
-.logo{
-    width: 30%;
-    background-color: green;
-}
-.menu{
-    width: 70%;
-    background-color: yellow;
-}
-.col-left{
-    width: 20%;
-    background-color: antiquewhite;
-}
-.col-content{
-    width: 80%;
-    background-color: aqua;
-}
-*/
-
-
 .grid{
     display: grid;
     grid-gap: 5px;
@@ -44,6 +7,9 @@
         'cl cl cc cc cc cc cc cc cc cc'
         '.  ft ft ft ft ft ft ft ft .'
     ;
+}
+.grid-item{
+    position: relative;
 }
 
 .logo{
@@ -65,10 +31,10 @@
     height: 80vh;
     grid-area: cc;
     background-color: aqua;
-    overflow: auto;
 }
 .footer{
     height: 5vh;
     grid-area: ft;
-    background-color: chartreuse;
+    background-color: burlywood;
 }
+
