--- a/angularVisit/src/app/logo/logo.component.css
+++ b/angularVisit/src/app/logo/logo.component.css
@@ -1,3 +1,9 @@
+.container{
+    position: relative;
+    top:0;
+    bottom: 0;
+    overflow: auto;
+}
 .logo-container{
     /*
     background-color: antiquewhite;
