--- a/angular/src/app/app.component.html
+++ b/angular/src/app/app.component.html
@@ -5,6 +5,8 @@
     <div class="grid-item logo"><app-logo></app-logo></div>
     <div class="grid-item menu"><app-menu></app-menu></div>
     <div class="grid-item col-left"><app-about></app-about></div>
-    <div class="grid-item col-content"><router-outlet></router-outlet></div>
+    <div class="grid-item col-content">
+        <router-outlet></router-outlet>
+    </div>
     <div class="grid-item footer"><app-footer></app-footer></div>
 </div>
