--- a/angular/src/app/home/home.component.html
+++ b/angular/src/app/home/home.component.html
@@ -1,3 +1,9 @@
 <p>
   home works!
 </p>
+
+<ul>
+  Пользователи:
+  <li>admin0/admin0 - Администратор</li>
+  <li>ivanov/ivanov - Пользователь</li>
+</ul>
