--- a/angular/src/app/menu/menu.component.html
+++ b/angular/src/app/menu/menu.component.html
@@ -1,8 +1,8 @@
 <div class="container">
   <a routerLink="/home" class="menu-item">Home</a>
   <a routerLink="/page" class="menu-item">Page</a>
-  <!--<a routerLink="/about" class="menu-item">About</a>-->
-  <a routerLink="/users" class="menu-item">Users</a>
-  <a *ngIf="us.isLogined"routerLink="/user/logout" class="menu-item">Logout</a>
-  <a *ngIf="!us.isLogined"routerLink="/user/login" class="menu-item">Login</a>
+  <a *ngIf="us.isAdmin" routerLink="/admin/users" class="menu-item">Admin Users</a>
+  <a *ngIf="us.isLogined" routerLink="/user/logout" class="menu-item">Logout</a>
+  <a *ngIf="us.isLogined" routerLink="/user/profile" class="menu-item">Profile</a>
+  <a *ngIf="!us.isLogined" routerLink="/user/login" class="menu-item">Login</a>
 </div>
