--- a/angular/src/app/user/logout/logout.component.html
+++ b/angular/src/app/user/logout/logout.component.html
@@ -1,3 +1,2 @@
-<p>
-  logout works!
-</p>
+<p>Вы дейстаительно желаете выполнить выход из системы?</p>
+<button (click)="onLogoutClick()">Выход</button>
