Наработки 20190224. RAW/register FormGroup

--- a/angular/src/app/menu/menu.component.html
+++ b/angular/src/app/menu/menu.component.html
@@ -5,4 +5,5 @@
   <a *ngIf="us.isLogined" routerLink="/user/logout" class="menu-item">Logout</a>
   <a *ngIf="us.isLogined" routerLink="/user/profile" class="menu-item">Profile</a>
   <a *ngIf="!us.isLogined" routerLink="/user/login" class="menu-item">Login</a>
+  <a *ngIf="!us.isLogined" routerLink="/user/register" class="menu-item">Register</a>
 </div>
