--- a/angular/src/app/user/register/register.component.html
+++ b/angular/src/app/user/register/register.component.html
@@ -1,3 +1,39 @@
-<p>
-  register works!
-</p>
+<div class="containner">
+    <form [formGroup]="form" (ngSubmit)="onSubmit()">
+        <div class="title">Регистрация</div>
+        <div class="body">
+            <div class="panel">
+                <label for="login">
+                    <span class="fieldLabel required">Логин:</span>
+                    <input formControlName="login" id="login" #login>
+                    <div *ngIf="form.controls.login.errors">
+<!--                        <div ngFor="let err on ngFor; let i = index">
+                            <div>"{{i}}"</div>
+                        </div>
+-->
+                        <div >{{form.controls.login.errors[1]}}</div>
+                        <div *ngIf="form.controls.login.errors.required">Поле обязательно для ввода</div>
+                        <div *ngIf="form.controls.login.errors.pattern">Не соответствует шаблону</div>
+                    </div>
+                </label>
+                <label for="displayName">
+                    <span class="fieldLabel required">Отображаемое имя:</span>
+                    <input formControlName="displayName" id="displayName">
+                </label>
+            </div>
+            <div class="form-group" formGroupName="pass">
+                <label for="">
+                    <span class="fieldLabel required">Пароль:</span>
+                    <input formControlName="userPass">
+                </label>
+                <label for="">
+                    <span class="fieldLabel required">Подтверждение пароля:</span>
+                    <input formControlName="userPassConfirm">
+                </label>
+            </div>
+        </div>
+        <div class="panel">
+            <button [disabled]="isValid">Сохранить</button>
+        </div>
+    </form>
+</div>
