--- a/angular/src/app/user/register/register.component.css
+++ b/angular/src/app/user/register/register.component.css
@@ -1,6 +1,10 @@
 *{
     box-sizing: border-box;
 }
+.errors{
+    color : red;
+}
+
 /*
 .containner{
     position: relative;
@@ -19,11 +23,15 @@ form{
     transform: translateX(-50%);
     width: 30rem;
     border: 1px solid gray;
+    border-radius: 0.5rem;
     background-color: lightgray;
 }
 .title{
     background-color: coral;
     text-align: center;
+    border-radius: 0.5rem;
+    padding: 0.3rem 0;
+    font-weight: bold;
 }
 .body{
     padding: 0.5rem;
@@ -38,4 +46,12 @@ input {
 .required:before{
     content :'*';
     color: coral;
+}
+
+.buttons{
+    text-align: center;
+    padding: 0.5rem;
+}
+.buttons>button{
+    margin-left: 1rem;
 }
