Наработки 20180226. Добавил блок "Закрывает следующие домашние задания:"

--- a/angular/src/app/home/home.component.html
+++ b/angular/src/app/home/home.component.html
@@ -7,3 +7,13 @@
   <li>admin0/admin0 - Администратор</li>
   <li>ivanov/ivanov - Пользователь</li>
 </ul>
+
+<pre>
+Закрывает следующие домашние задания:
+[Lesson71-20190108]
+Домашнее задание="Создать сайт визитку на Angular."
+[Lesson80-20190208]
+Домашнее задание="Маршрутизация PHP"
+[Lesson83-20190219]
+Домашнее задание="Авторизация"
+</pre>
